# mpb-ml

./: .gitignore  README.md  config.yaml  requirements.txt  setup.py
data/portals/: cnn_political_news.txt  folha_political_news.txt  g1_political_news.txt  gazeta_political_news.txt  istoe_political_news.txt  metropoles_political_news.txt
data/speech/: Partidos.csv
media_bias_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: political_bias_model.joblib
notebooks/: MediaBiasReport.ipynb
output/: CNN_analysis.txt  CNN_predictions.csv  Folha_analysis.txt  Folha_predictions.csv  G1_analysis.txt  G1_predictions.csv  Gazeta_analysis.txt  Gazeta_predictions.csv  Istoe_analysis.txt  Istoe_predictions.csv  Metropoles_analysis.txt  Metropoles_predictions.csv  metrics_20250222_174248.txt  metrics_20250223_103248.txt  metrics_20250301_134333.txt  metrics_20250301_152034.txt  metrics_20250301_153412.txt
src/: __init__.py  main.py  project_paths.py
src/config/: config_manager.py
src/model/: MediaBiasAnalyzer.py  PoliticalBiasInferencer.py  PoliticalBiasModelTrainer.py  __init__.py  main.py
src/scrapper/: NewsPortalScraper.py  NewsScraper.py  __init__.py  main.py
src/speech/: DiscursosDeputadosCollector.py  PoliticalSpectrumEnricher.py  __init__.py  main.py  pyproject.toml
src/visual/: MediaBiasVisualizer.py  __init__.py
